Step 2: Creating a Model

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -32,6 +32,12 @@
 			"viewName": "ui5.databinding.view.App",
 			"type": "XML",
 			"id": "app"
+		},
+		"models": {
+			"": {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "./model/data.json"
+			}
 		}
 	}
 }
