--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -17,6 +17,7 @@
 		}
 	},
 	"sap.ui5": {
+		"handleValidation": true,
         "contentDensities": {
             "compact": true,
             "cozy": true
