Step 12: Aggregation Biding Using templates

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -39,6 +39,10 @@
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "./model/data.json"
 			},
+			"products" : {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "./model/products.json"
+			},
 			"data_i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
